--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "screen-keyboard",
+  "name": "@lslan/screen-keyboard",
   "private": false,
   "version": "0.0.1",
   "author": "LuoSLan",
@@ -23,20 +23,18 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vue-tsc -b --noEmit && vite build",
     "preview": "vite preview"
-  },
-  "dependencies": {
-    "@vueuse/core": "^13.0.0",
-    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "@vueuse/core": "^13.0.0",
     "less": "^4.2.2",
     "terser": "^5.39.0",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
+    "vue": "^3.5.13",
     "vue-tsc": "^2.2.4"
   }
 }
